--- a/package.json
+++ b/package.json
@@ -1,53 +1,27 @@
 {
-  "name": "secondhand-trading-pwa",
-  "version": "0.1.0",
-  "private": true,
+  "name": "ccmarket-react",
+  "version": "1.0.0",
+  "description": "청춘마켓 React PWA",
+  "main": "index.js",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.31",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "@types/styled-components": "^5.1.34",
     "firebase": "^11.7.3",
-    "heic2any": "^0.0.4",
-    "is-root": "^3.0.0",
-    "isexe": "^3.1.1",
     "jsqr": "^1.4.0",
-    "postcss-normalize": "^13.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-easy-crop": "^5.5.0",
-    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1",
+    "react-router-dom": "^6.22.3",
     "socket.io-client": "^4.8.1",
-    "styled-components": "^6.1.19",
-    "typescript": "^4.9.5",
-    "uuid": "^11.1.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "emulators": "firebase emulators:start",
-    "emulators:export": "firebase emulators:export ./emulator-data",
-    "emulators:import": "firebase emulators:start --import=./emulator-data"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "styled-components": "^6.1.19"
   },
   "browserslist": {
     "production": [
@@ -60,9 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-slick": "^0.23.13",
-    "firebase-tools": "^14.4.0"
   }
 }
